--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dropzone": "^14.3.5",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
+    "react-quill-new": "^3.6.0",
     "react-router": "^7.1.5",
     "react-router-dom": "^7.9.5",
     "react-toastify": "^11.0.5",
